-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.2
-
None
-
-
4ce801341 (master)
Refactor function 'Re-order Member Function Definitions According to Declaration Order' successfully reorders functions but not the doxygen comments associated with the functions.
For Gerrit Dashboard: QTCREATORBUG-33070 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
654209,2 | CppEditor: Consider comments in SynchronizeMemberFunctionOrder quickfix | master | qt-creator/qt-creator | Status: MERGED | +2 | -1 |