CppEditor: Consider comments in SynchronizeMemberFunctionOrder quickfix

Fixes: QTCREATORBUG-33070
Change-Id: Icf6dc0664294735f3781e6e186656bcf10aafdc9
Reviewed-by: David Schulz <david.schulz@qt.io>