src/plugins/cppeditor/testcases/reorder-member-impls/different-locations/impl1.cpp
@@ -1,5 +1,11 @@
 #include "header.h"
 
+// Comment for ninthFunction
 void S::ninthFunction() {}
 void S::firstFunction() {}
+
+/**
+ * Comment for secondFunction
+ */
+
 void S::secondFunction() {}
